[package]
name = "nft-mystery-box"
version = "0.1.0"
authors = ["Daniel Wang <daniel@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.5"
near-contract-standards = "4.0.0-pre.5"
serde = "1.0.133"
near-units = "0.2.0"
serde_with = "1.11.0"

[dev-dependencies]
rand = "0.7.2"
rand_xorshift = "0.2.0"
